add a css class to partially reset an unordered list styles

--- a/static/styles.css
+++ b/static/styles.css
@@ -5,3 +5,10 @@
 .no-underscore {
     text-decoration: none;
 }
+
+.no-list-bullet-point {
+    li {
+        list-style: none;
+    }
+    padding-inline-start: 0;
+}
