--- a/templates/profile.templ
+++ b/templates/profile.templ
@@ -1,30 +1,32 @@
 package templates
 
 templ profile(menuItems []ProfileMenuItem) {
-    <section class="grid">
-        <ul>
-            for _, item := range menuItems {
-                <li><p><a href={ templ.URL(item.Link) }>{ item.Name }</a></p></li>
-            }
-        </ul>
-        <form>
-            <label for="email">
-                Email
-                <input value="abobus@example.com" id="email" type="email" />
-            </label>
-            <label for="phone">
-                Phone number
-                <input value="+38054144488" id="phone" type="text" />
-            </label>
-            <label for="firstName">
-                First name
-                <input value="Abobus" id="firstName" type="text" />
-            </label>
-            <label for="lastName">
-                Last name
-                <input value="Sus" id="lastName" type="text" />
-            </label>
-            <input type="button" value="Change" />
-        </form>
-    </section>
+    @main() {
+        <section class="grid">
+            <ul class="no-list-bullet-point">
+                for _, item := range menuItems {
+                    <li><article><a href={ templ.URL(item.Link) }>{ item.Name }</a></article></li>
+                }
+            </ul>
+            <form>
+                <label for="email">
+                    Email
+                    <input value="abobus@example.com" id="email" type="email" />
+                </label>
+                <label for="phone">
+                    Phone number
+                    <input value="+38054144488" id="phone" type="text" />
+                </label>
+                <label for="firstName">
+                    First name
+                    <input value="Abobus" id="firstName" type="text" />
+                </label>
+                <label for="lastName">
+                    Last name
+                    <input value="Sus" id="lastName" type="text" />
+                </label>
+                <input type="button" value="Change" />
+            </form>
+        </section>
+    }
 }
