--- a/templates/index.templ
+++ b/templates/index.templ
@@ -9,7 +9,7 @@ templ mainHeader(isAuthorized bool) {
     @header() {
         <nav>
             <ul>
-              <h1><a href="/" class="contrast no-underscore"><strong>Oktion</strong></a></h1>
+              <h1><a hx-boost="true" hx-target="#main" hx-swap="outerHTML" href="/" class="contrast no-underscore"><strong>Oktion</strong></a></h1>
             </ul>
             <ul>
               <li>
@@ -23,7 +23,7 @@ templ mainHeader(isAuthorized bool) {
                     </a>
                 }
               </li>
-              <li><button>Auction!</button></li>
+              <li><a role="button" href="/auctions/new" hx-boost="true" hx-target="#main" hx-swap="outerHTML">Auction!</a></li>
             </ul>
         </nav>
     }
@@ -61,6 +61,7 @@ templ root(components ...templ.Component) {
           href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.blue.min.css"
         />
         <link rel="stylesheet" href="/static/styles.css" />
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🔨</text></svg>"></link>
         <title>Oktion</title>
       </head>
       <body>
