--- a/templates/index.templ
+++ b/templates/index.templ
@@ -2,7 +2,7 @@ package templates
 
 import (
     "github.com/artemsmotritel/oktion/types"
-    "strconv"
+    "github.com/artemsmotritel/oktion/utils"
 )
 
 templ mainHeader(isAuthorized bool) {
@@ -40,12 +40,25 @@ templ mainFooter() {
 
 templ mainMain(categories ...types.Category) {
     @main() {
-        <h3>Categories</h3>
-          <ul>
-            for _, category := range categories {
-              <li><a href={ templ.URL("/category/" + strconv.FormatInt(category.ID, 10)) }>{ category.Name }</a></li>
-            }
-          </ul>
+        <section>
+            <h2>
+                Find yourself an auction
+            </h2>
+            <form role="search">
+                <input id="search-input" name="search" type="search" placeholder="Search" />
+                <input type="submit" value="Search" />
+            </form>
+        </section>
+        <section>
+            <h2>
+                Categories
+            </h2>
+              <ul>
+                for _, category := range categories {
+                  <li><a href={ utils.ConvertToTemplURL("category", category.ID, ) }>{ category.Name }</a></li>
+                }
+              </ul>
+        </section>
     }
 }
 
