fix remove border radius from the search bar

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,16 @@
     --pico-border-radius: 0;
 }
 
+[role=search]>:last-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+[role=search]>:first-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
 .no-underscore {
     text-decoration: none;
 }
