feature extend application utils  - add an empty map in utils.go to use in templates  - create a divider and body components in utils.templ

--- a/templates/utils.templ
+++ b/templates/utils.templ
@@ -11,3 +11,19 @@ templ header() {
         { children... }
     </header>
 }
+
+templ divider(message string) {
+    <section class="divider">
+        <hr />
+        <small>{ message }</small>
+        <hr />
+    </section>
+}
+
+templ body(components ...templ.Component) {
+    <body>
+        for _, c := range components {
+            @c
+        }
+    </body>
+}
