--- a/static/styles.css
+++ b/static/styles.css
@@ -31,6 +31,17 @@
     gap: var(--pico-spacing);
 }
 
+.divider {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: var(--pico-spacing);
+    align-items: center;
+    hr {
+        flex: 1;
+    }
+}
+
 .grid.narrow-row {
     grid-row-gap: 0;
 }
