feature implement error templates to display a 404/403/401/500 errors

--- a/templates/error.templ
+++ b/templates/error.templ
@@ -36,3 +36,15 @@ templ forbidden() {
         </hgroup>
     }
 }
+
+templ internal() {
+    @main() {
+        <hr />
+        <hgroup>
+            <h2>Try again later</h2>
+            <p>
+                Something went very wrong on our end
+            </p>
+        </hgroup>
+    }
+}
