--- a/templates/index.templ
+++ b/templates/index.templ
@@ -9,21 +9,45 @@ templ mainHeader(isAuthorized bool) {
     @header() {
         <nav>
             <ul>
-              <h1><a hx-boost="true" hx-target="#main" hx-swap="outerHTML" href="/" class="contrast no-underscore"><strong>Oktion</strong></a></h1>
+                <h1><a hx-boost="true" hx-target="#main" hx-swap="outerHTML" href="/" class="contrast no-underscore"><strong>Oktion</strong></a></h1>
             </ul>
             <ul>
-              <li>
-                if isAuthorized {
-                    <a href="/profile" hx-boost="true" hx-target="#main" hx-swap="outerHTML">
-                      <img style="width: 25px; margin-right: 5px;" src="/static/profile.svg" alt="a profile icon"/>Your profile
+                <li>
+                    if isAuthorized {
+                        <details class="dropdown">
+                            <summary>
+                                Account
+                            </summary>
+                            <ul dir="rtl">
+                                <li>
+                                    <a href="/profile" hx-boost="true" hx-target="#main" hx-swap="outerHTML">
+                                        Your profile
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/my-auctions" hx-boost="true" hx-target="#main" hx-swap="outerHTML">
+                                        Your auctions
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" hx-post={ utils.ConvertToTemplStringURL("logout") } hx-swap="none">Logout</a>
+                                </li>
+                            </ul>
+                        </details>
+                    } else {
+                        <a hx-boost="true" href="/login">
+                          Login
+                        </a>
+                    }
+                </li>
+                <li>
+                    <a
+                        if isAuthorized {
+                            style="margin-top: 2px;"
+                        }
+                        role="button" href="/auctions/new" hx-boost="true" hx-target="#main" hx-swap="outerHTML">Auction!
                     </a>
-                } else {
-                    <a href="/login">
-                      Login
-                    </a>
-                }
-              </li>
-              <li><a role="button" href="/auctions/new" hx-boost="true" hx-target="#main" hx-swap="outerHTML">Auction!</a></li>
+                </li>
             </ul>
         </nav>
     }
