--- a/templates/form/form.templ
+++ b/templates/form/form.templ
@@ -1,7 +1,7 @@
 package form
 
 templ Input(attributes templ.Attributes) {
-    if attributes["type"] == TextArea {
+    if attributes["type"] == TextAreaInputType {
         <textarea { attributes... }>
             if val, ok := attributes["value"].(string); ok && val != "" {
                 { val }
